@@ -28,6 +28,7 @@ import org.apache.http.client.CredentialsProvider;
 import org.apache.http.impl.NoConnectionReuseStrategy;
 import org.apache.http.impl.client.BasicCredentialsProvider;
 import org.apache.http.impl.nio.reactor.IOReactorConfig;
+import org.apache.lucene.search.TotalHits;
 import org.apache.lucene.search.join.ScoreMode;
 import org.broadinstitute.dsm.db.DDPInstance;
 import org.broadinstitute.dsm.db.dto.ddp.instance.DDPInstanceDto;
@@ -67,6 +68,7 @@ import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.elasticsearch.index.query.RangeQueryBuilder;
 import org.elasticsearch.search.SearchHit;
+import org.elasticsearch.search.SearchHits;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.fetch.subphase.FetchSourceContext;
 import org.elasticsearch.search.sort.SortOrder;
@@ -145,13 +147,9 @@ public class ElasticSearchUtil {
 
     public static synchronized void initClient() {
         if (client == null) {
-            try {
-                client = getClientForElasticsearchCloud(DSMConfig.getSqlFromConfig(ApplicationConfigConstants.ES_URL),
-                        DSMConfig.getSqlFromConfig(ApplicationConfigConstants.ES_USERNAME),
-                        DSMConfig.getSqlFromConfig(ApplicationConfigConstants.ES_PASSWORD));
-            } catch (MalformedURLException e) {
-                throw new DsmInternalError("Error while initializing ES client", e);
-            }
+            client = getClientForElasticsearchCloud(DSMConfig.getSqlFromConfig(ApplicationConfigConstants.ES_URL),
+                    DSMConfig.getSqlFromConfig(ApplicationConfigConstants.ES_USERNAME),
+                    DSMConfig.getSqlFromConfig(ApplicationConfigConstants.ES_PASSWORD));
         }
     }
 
@@ -173,49 +171,59 @@ public class ElasticSearchUtil {
     }
 
     public static RestHighLevelClient getClientForElasticsearchCloud(@NonNull String baseUrl, @NonNull String userName,
-                                                                     @NonNull String password) throws MalformedURLException {
-        final CredentialsProvider credentialsProvider = new BasicCredentialsProvider();
-        credentialsProvider.setCredentials(AuthScope.ANY, new UsernamePasswordCredentials(userName, password));
-
-        URL url = new URL(baseUrl);
+                                                                     String password) {
         String proxy = DSMConfig.hasConfigPath(ApplicationConfigConstants.ES_PROXY)
                 ? DSMConfig.getSqlFromConfig(ApplicationConfigConstants.ES_PROXY) : null;
         return getClientForElasticsearchCloud(baseUrl, userName, password, proxy);
     }
 
     public static RestHighLevelClient getClientForElasticsearchCloud(@NonNull String baseUrl, @NonNull String userName,
-                                                                     @NonNull String password, String proxy) throws MalformedURLException {
-        final CredentialsProvider credentialsProvider = new BasicCredentialsProvider();
-        credentialsProvider.setCredentials(AuthScope.ANY, new UsernamePasswordCredentials(userName, password));
+                                                                     String password, String proxy) {
+        try {
+            URL url = new URL(baseUrl);
 
-        URL url = new URL(baseUrl);
-        URL proxyUrl = (proxy != null && !proxy.isBlank()) ? new URL(proxy) : null;
-        if (proxyUrl != null) {
-            logger.info("Using Elasticsearch client proxy: {}", proxyUrl);
+            // no password indicates a local/test ES instance
+            if (StringUtils.isBlank(password)) {
+                return new RestHighLevelClient(
+                        RestClient.builder(new HttpHost(url.getHost(), url.getPort(), "http")));
+            }
+
+            final CredentialsProvider credentialsProvider = new BasicCredentialsProvider();
+            credentialsProvider.setCredentials(AuthScope.ANY, new UsernamePasswordCredentials(userName, password));
+
+            URL proxyUrl = StringUtils.isNotBlank(proxy) ? new URL(proxy) : null;
+            if (proxyUrl != null) {
+                logger.info("Using Elasticsearch client proxy: {}", proxyUrl);
+            }
+
+            RestClientBuilder builder = RestClient.builder(new HttpHost(url.getHost(), url.getPort(), url.getProtocol()))
+                    .setHttpClientConfigCallback(httpClientBuilder -> {
+                        httpClientBuilder.setDefaultCredentialsProvider(credentialsProvider);
+                        if (proxyUrl != null) {
+                            httpClientBuilder.setProxy(new HttpHost(proxyUrl.getHost(), proxyUrl.getPort(), proxyUrl.getProtocol()));
+                            httpClientBuilder.setConnectionReuseStrategy(NoConnectionReuseStrategy.INSTANCE);
+                            httpClientBuilder.setDefaultIOReactorConfig(IOReactorConfig.custom().setSoKeepAlive(true).build());
+                        }
+                        return httpClientBuilder;
+                    });
+
+            return new RestHighLevelClient(builder);
+        } catch (MalformedURLException e) {
+            throw new DsmInternalError("Invalid ES client URL: " + baseUrl, e);
         }
-
-        RestClientBuilder builder = RestClient.builder(new HttpHost(url.getHost(), url.getPort(), url.getProtocol()))
-                .setHttpClientConfigCallback(httpClientBuilder -> {
-                    httpClientBuilder.setDefaultCredentialsProvider(credentialsProvider);
-                    if (proxyUrl != null) {
-                        httpClientBuilder.setProxy(new HttpHost(proxyUrl.getHost(), proxyUrl.getPort(), proxyUrl.getProtocol()));
-                        httpClientBuilder.setConnectionReuseStrategy(NoConnectionReuseStrategy.INSTANCE);
-                        httpClientBuilder.setDefaultIOReactorConfig(IOReactorConfig.custom().setSoKeepAlive(true).build());
-                    }
-                    return httpClientBuilder;
-                });
-
-        return new RestHighLevelClient(builder);
     }
 
     public static RestHighLevelClient getClientForElasticsearchCloudCF(@NonNull String baseUrl, @NonNull String userName,
-                                                                       @NonNull String password, String proxy)
-            throws MalformedURLException {
-        final CredentialsProvider credentialsProvider = new BasicCredentialsProvider();
-        credentialsProvider.setCredentials(AuthScope.ANY, new UsernamePasswordCredentials(userName, password));
-
-        URL url = new URL(baseUrl);
+                                                                       @NonNull String password, String proxy) {
         return getClientForElasticsearchCloud(baseUrl, userName, password, proxy);
+    }
+
+    protected static SearchResponse search(SearchRequest searchRequest) {
+        try {
+            return client.search(searchRequest, RequestOptions.DEFAULT);
+        } catch (IOException e) {
+            throw new DsmInternalError("Error contacting ES server", e);
+        }
     }
 
     public static Map<String, Map<String, Object>> getSingleParticipantFromES(@NonNull String realm, @NonNull String index,
@@ -237,7 +245,7 @@ public class ElasticSearchUtil {
                     searchSourceBuilder.from(i * scrollSize);
                     searchRequest.source(searchSourceBuilder);
 
-                    response = client.search(searchRequest, RequestOptions.DEFAULT);
+                    response = search(searchRequest);
                     addingParticipantStructuredHits(response, esData, realm, index);
                     i++;
                 }
@@ -268,7 +276,7 @@ public class ElasticSearchUtil {
                     searchSourceBuilder.from(i * scrollSize);
                     searchRequest.source(searchSourceBuilder);
 
-                    response = client.search(searchRequest, RequestOptions.DEFAULT);
+                    response = search(searchRequest);
                     addingParticipantStructuredHits(response, esData, instanceDisplayName, index);
                     i++;
                 }
@@ -295,17 +303,10 @@ public class ElasticSearchUtil {
         return esData;
     }
 
-    public static Optional<ElasticSearchParticipantDto> getParticipantESDataByParticipantId(@NonNull String index,
-                                                                                            @NonNull String participantId) {
+    public static ElasticSearchParticipantDto getParticipantESDataByParticipantId(@NonNull String index, @NonNull String participantId) {
         initialize();
-        Optional<ElasticSearchParticipantDto> elasticSearch = Optional.empty();
-        logger.info("Getting ES data for participant: " + participantId);
-        try {
-            elasticSearch = fetchESDataByParticipantId(index, participantId, client);
-        } catch (Exception e) {
-            throw new RuntimeException("Couldn't get ES for participant: " + participantId + " from " + index, e);
-        }
-        logger.info("Got ES data for participant: " + participantId + " from " + index);
+        ElasticSearchParticipantDto elasticSearch  = fetchESDataByParticipantId(index, participantId, client);
+        logger.info("Got ES data for participant: {} from {}", participantId, index);
         return elasticSearch;
     }
 
@@ -323,34 +324,34 @@ public class ElasticSearchUtil {
         return elasticSearch;
     }
 
-    public static Optional<ElasticSearchParticipantDto> fetchESDataByParticipantId(String index, String participantId,
-                                                                                   RestHighLevelClient client) throws IOException {
+    public static ElasticSearchParticipantDto fetchESDataByParticipantId(String index, String participantId,
+                                                                         RestHighLevelClient client) {
         String matchQueryName = ParticipantUtil.isGuid(participantId) ? PROFILE_GUID : PROFILE_LEGACYALTPID;
-        return Optional.of(getElasticSearchForGivenMatch(index, participantId, client, matchQueryName));
+        return getElasticSearchForGivenMatch(index, participantId, client, matchQueryName);
     }
 
-    public static ElasticSearchParticipantDto fetchESDataByAltpid(String index, String altpid, RestHighLevelClient client)
-            throws IOException {
-        String matchQueryName = PROFILE_LEGACYALTPID;
-        return getElasticSearchForGivenMatch(index, altpid, client, matchQueryName);
+    public static ElasticSearchParticipantDto fetchESDataByAltpid(String index, String altpid, RestHighLevelClient client) {
+        return getElasticSearchForGivenMatch(index, altpid, client, PROFILE_LEGACYALTPID);
     }
 
     private static ElasticSearchParticipantDto getElasticSearchForGivenMatch(String index, String id, RestHighLevelClient client,
-                                                                            String matchQueryName) throws IOException {
+                                                                             String matchQueryName) {
         initialize();
         SearchRequest searchRequest = new SearchRequest(index);
         SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
-        SearchResponse response = null;
         searchSourceBuilder.query(QueryBuilders.matchQuery(matchQueryName, id)).sort(PROFILE_CREATED_AT, SortOrder.DESC);
         searchSourceBuilder.size(1);
         searchSourceBuilder.from(0);
         searchRequest.source(searchSourceBuilder);
 
-        response = client.search(searchRequest, RequestOptions.DEFAULT);
-        response.getHits();
-        ElasticSearch elasticSearch = new ElasticSearch();
-        return elasticSearch.parseSourceMap(response.getHits().getTotalHits().value > 0 ? response.getHits().getAt(0).getSourceAsMap() : null)
-                .get();
+        SearchResponse response = search(searchRequest);
+        SearchHits hits = response.getHits();
+        Map<String, Object> sourceMap = null;
+        TotalHits totalHits = hits.getTotalHits();
+        if (totalHits != null && totalHits.value > 0) {
+            sourceMap = hits.getAt(0).getSourceAsMap();
+        }
+        return new ElasticSearch().parseSourceMap(sourceMap);
     }
 
     public static Map<String, Map<String, Object>> getFilteredDDPParticipantsFromES(@NonNull DDPInstance instance, @NonNull String filter) {
@@ -386,7 +387,7 @@ public class ElasticSearchUtil {
                     searchSourceBuilder.from(i * scrollSize);
                     searchRequest.source(searchSourceBuilder);
 
-                    response = client.search(searchRequest, RequestOptions.DEFAULT);
+                    response = search(searchRequest);
                     addingParticipantStructuredHits(response, esData, instanceName, index);
                     i++;
                 }
@@ -424,14 +425,9 @@ public class ElasticSearchUtil {
             searchSourceBuilder.from(pageNumber * scrollSize);
             searchRequest.source(searchSourceBuilder);
 
-            try {
-                response = client.search(searchRequest, RequestOptions.DEFAULT);
-                totalHits = response.getHits().getTotalHits().value;
-                pageNumber++;
-            } catch (IOException e) {
-                throw new RuntimeException(
-                        "Could not query elastic index " + indexName + " for " + participantGuids.size() + " participants", e);
-            }
+            response = search(searchRequest);
+            totalHits = response.getHits().getTotalHits().value;
+            pageNumber++;
             for (SearchHit hit : response.getHits()) {
                 Map<String, Object> participantRecord = hit.getSourceAsMap();
                 JsonObject participantJson = new JsonParser().parse(new Gson().toJson(participantRecord)).getAsJsonObject();
@@ -765,12 +761,12 @@ public class ElasticSearchUtil {
             searchRequest.source(searchSourceBuilder);
 
             logger.info("Getting ES profile for participant with guid/altpid: {}", guidOrAltPid);
-            SearchResponse response = client.search(searchRequest, RequestOptions.DEFAULT);
+            SearchResponse response = search(searchRequest);
 
             Profile profile = null;
             if (response.getHits().getTotalHits().value > 0) {
                 Map<String, Object> source = response.getHits().getAt(0).getSourceAsMap();
-                profile = new ElasticSearch().parseSourceMap(source).flatMap(ElasticSearchParticipantDto::getProfile).orElse(null);
+                profile = new ElasticSearch().parseSourceMap(source).getProfile().orElse(null);
                 if (profile != null) {
                     logger.info("Found ES profile for participant, guid: {} altpid: {}", profile.getGuid(), profile.getLegacyAltPid());
                 }
@@ -1315,8 +1311,8 @@ public class ElasticSearchUtil {
      *                                            a same fieldName (for example related tp `SELF_CURRENT_AGE`)
      * @param parentNestedOfRangeBuilderOfNumbers reference to NestedQueryBuilder containing a Range of numbers
      * @return BoolQueryBuilder  finalQuery: it can be the same finalQuery or it can be reorganized finalQuery
-     * where RangeQueryBuilder removed from the initial place inside finalQuery and added into a must()-block
-     * together with `IS NOT NULL` query (for a field `fieldName`).
+     *     where RangeQueryBuilder removed from the initial place inside finalQuery and added into a must()-block
+     *     together with `IS NOT NULL` query (for a field `fieldName`).
      */
     private static BoolQueryBuilder processIsNotNullForRangeOfNumbers(String fieldName, BoolQueryBuilder activityAnswer,
                                                                       BoolQueryBuilder finalQuery, Map<String, String> queryPartsMap,
@@ -1377,7 +1373,7 @@ public class ElasticSearchUtil {
                     searchSourceBuilder.from(i * scrollSize);
                     searchRequest.source(searchSourceBuilder);
 
-                    response = client.search(searchRequest, RequestOptions.DEFAULT);
+                    response = search(searchRequest);
                     addingActivityDefinitionHits(response, esData);
                     i++;
                 }
